@@ -36,12 +36,17 @@ apport (0.35) UNRELEASED; urgency=low
     binary values, and file references get gzip compressed separate
     attachments. Also add various test cases.
 
+  Bug/crash information:
+
+  * apport/report.py, add_user_info(): Add list of system groups that the user
+    belongs to.
+
   Bug fixes:
 
   * po/Makefile: Add top_srcdir to work with current intltool.
   * po/de.po: Unfuzz some strings.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 29 Dec 2006 12:07:22 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Tue,  2 Jan 2007 14:19:16 +0100
 
 apport (0.34) feisty; urgency=low
 
